account/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: account
 labels:
   app: account
spec:
 ports:
 - port: 9001
   name: http
 selector:
   app: account
