account/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: account-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/account
        backend:
         serviceName: account
         servicePort: 9001
